Changelog
=========

1.0.1 (02/06/2008)
------------------

* Fix broken template for registration.

1.0 (27/05/2008)
----------------

* Initial version, wrote with `plone.openid`_ as first example.

.. _plone.openid: http://pypi.python.org/pypi/plone.openid
