@@ -7,6 +7,7 @@ from zope.component import getMultiAdapter
 from silva.pas.openid.interfaces import IOpenIDAskUserInformation
 
 from Products.Five import BrowserView
+from Products.Silva.i18n import translate as _
 
 from zExceptions import Redirect
 from urllib import quote
@@ -27,15 +28,15 @@ class StartOpenIDRegistration(BrowserView):
 
         id = self.request.form.get('__ac_identity_register', '').strip()
         if not id:
-            self._redirect("You need to provide an identity.")
+            self._redirect(_(u"You need to provide an identity."))
             
         captcha = self.request.form.get('__ac_identity_register_captcha', None)
         if not captcha:
-            self._redirect("You need to fill the captcha.")
+            self._redirect(_(u"You need to fill the captcha."))
 
         utility = getMultiAdapter((self.context, self.request), name='captcha')
         if not utility.verify(captcha):
-            self._redirect("Error while validating the captcha.")
+            self._redirect(_(u"Error while validating the captcha."))
 
 
         self.request.form['__ac_identity_url'] = id # Re-inject the id
