@@ -1,9 +1,8 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
-<!-- Silva 2.1 (unreleased) -->
-<html xmlns="http://www.w3.org/1999/xhtml"
-  lang="en"
-  xml:lang="en"
-  xmlns:tal="http://xml.zope.org/namespaces/tal">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en"
+      xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      i18n:domain="Silva">
 <head>
   <title>Login Required</title>
   <link rel="stylesheet" href="frontend.css" type="text/css"
@@ -16,7 +15,13 @@
 <body>
   <div class="public">
 
-    <h3> Log in with an existing account </h3>
+    <h3 i18n:translate=""> Log in with an existing account </h3>
+
+    <p style="color: red; font-weight: bold" 
+       tal:condition="request/login_status | nothing"
+       tal:content="request/login_status">
+      Status
+    </p>
 
     <form method="post" action=""
       tal:attributes="action string:${here/absolute_url}/login">
@@ -24,46 +29,50 @@
         tal:attributes="value request/came_from | string:"/>
       <table class="access">
         <tr>
-          <td><b>Login:</b></td>
+          <td><b i18n:translate="">Login:</b></td>
           <td><input type="text" name="__ac_name" size="30" /></td>
         </tr>
         <tr>
-          <td><b>Password:</b>&nbsp;</td>
+          <td><b i18n:translate="">Password:</b>&nbsp;</td>
           <td><input type="password" name="__ac_password" size="30" /></td>
         </tr>
         <tr>
           <td></td>
-          <td><input type="submit" value=" Log In " /></td>
+          <td><input type="submit" value=" Log In "
+                     i18n:attributes="value" /></td>
         </tr>
       </table>
     </form>
     <br />
 
-    <h3> Log in with your OpenID </h3>
+    <h3 i18n:translate=""> Log in with your OpenID </h3>
 
     <form method="post" action="#"
           tal:attributes="action string:${here/absolute_url}/silva_openid_register.html">
       <input type="hidden" name="came_from" value=""
              tal:attributes="value request/came_from | string:"/>
-      <p>If you never logged in on this site before, first 
-        <input style="margin-top:0" type="submit" value="Register your OpenID" /></p>
+      <p i18n:translate="">If you never logged in on this site before, first 
+        <input style="margin-top:0" type="submit" value="Register your OpenID"
+               i18n:attributes="value"/>
+      </p>
     </form>
 
     <form method="post" action="#"
       tal:attributes="action string:${here/absolute_url}/login">
       <input type="hidden" name="came_from" value=""
         tal:attributes="value request/came_from | string:"/>
-      <p>
+      <p i18n:translate="">
        If you have logged in before enter the url of your OpenID:
       </p>
       <table class="access">
         <tr>
-          <td><b>OpenID:</b>&nbsp;</td>
+          <td><b i18n:translate="">OpenID:</b>&nbsp;</td>
           <td><input type="text" name="__ac_identity_url" size="50" /></td>
         </tr>
         <tr>
           <td></td>
-          <td><input type="submit" value=" Log in " /></td>
+          <td><input type="submit" value=" Log in " 
+                     i18n:attributes="value" /></td>
         </tr>
       </table>
     </form>
