@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
-<!-- Silva 2.1 (unreleased) -->
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en"
       xml:lang="en"
-      xmlns:tal="http://xml.zope.org/namespaces/tal">
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      i18n:domain="Silva">
 <head>
   <title>OpenID Registration</title>
   <link rel="stylesheet" href="frontend.css" type="text/css"
@@ -15,7 +15,7 @@
 <body>
   <div class="public">
 
-    <h3>OpenID Registration</h3>
+    <h3 i18n:translate="">OpenID Registration</h3>
 
     <p style="color: red; font-weight: bold" 
        tal:condition="request/openid_status | nothing"
@@ -23,7 +23,7 @@
       Status
     </p>
 
-    <p>
+    <p i18n:translate="">
       If this is the first time you login with OpenID on this site we'll
       request basic information, such as your full name. If it's available and
       you allow us to use it, your name will then appear in your postings.
@@ -33,35 +33,53 @@
     <form method="post" action=""
       tal:attributes="action string:${here/absolute_url}/service_members/register_openid_user">
       <input type="hidden" name="came_from" value=""
-        tal:attributes="value request/came_from | string:"/>
+             tal:attributes="value request/came_from | string:"/>
       <table class="access">
         <tr>
-          <td colspan="2"><p>Enter the url of your OpenID, such as http://yourname.myopenid.com/:</p></td>
+          <td colspan="2">
+            <p i18n:translate="">
+              Enter the url of your OpenID, such as
+              http://yourname.myopenid.com/:
+            </p>
+          </td>
         </tr>
         <tr>
-          <td><b>OpenID:</b>&nbsp;</td>
+          <td><b i18n:translate="">OpenID:</b>&nbsp;</td>
           <td><input type="text" name="__ac_identity_register" size="50" /></td>
         </tr>
         <tr>
-          <td><b>Captcha:</b></td>
+          <td><b i18n:translate="">Captcha:</b></td>
           <td tal:define="captcha nocall:here/@@captcha">
             <tal:captcha tal:content="structure captcha/image_tag" />
             <div class="captchaAudio">
-            <a href="#" target="_blank"
-              tal:attributes="href captcha/audio_url">Audio version</a>
+              <a href="#" target="_blank"
+                 tal:attributes="href captcha/audio_url"
+                 i18n:translate="">
+                Audio version
+              </a>
             </div>
           </td>
         </tr>
         <tr>
-          <td colspan="2"><p>To be sure you're not a spambot, please type in the letters/numbers in the image or audio:</p></td>
+          <td colspan="2">
+            <p i18n:translate="">
+              To be sure you're not a spambot, please type in the
+              letters/numbers in the image or audio:
+            </p>
+          </td>
         </tr>
         <tr>
-          <td><b>Captcha validation:</b></td>
-          <td><input type="text" name="__ac_identity_register_captcha" size="20" /></td>
+          <td><b i18n:translate="">Captcha validation:</b></td>
+          <td>
+            <input type="text" name="__ac_identity_register_captcha" size="20" />
+          </td>
         </tr>
         <tr>
           <td></td>
-          <td><input type="submit" value=" Register your OpenID " /></td>
+          <td>
+            <input type="submit" value=" Register your OpenID "
+                   i18n:attributes="value" />
+          </td>
         </tr>
       </table>
     </form>
